# Scraper-With-Wrapper

./: README.md  amazon_test_spider.py  pyproject.toml  requirements.txt  test_scraper.py  walmart_debug.html
utils/: scraper.py
walmart-python-scrapy-scraper/: setup.py
walmart-python-scrapy-scraper/walmart_scraper/: settings.py
walmart-python-scrapy-scraper/walmart_scraper/spiders/: walmart.py
