[project]
name = "backend"
version = "0.1.0"
description = "Walmart Scraper Backend with Scrapy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scrapy>=2.0",
    "scrapeops-scrapy",
    "scrapeops-scrapy-proxy-sdk",
    "scrapy-playwright",
    "scrapy-user-agents",
    "playwright",
]
